--- a/client/.gitignore
+++ b/client/.gitignore
@@ -27,8 +27,14 @@ Component/
 Component1/
 Component3/
 
-.env
-.env.local
+client/.env
+client/.env.local
+client/.env.development.local
+client/.env.test.local
+client/env.production.local
+client/.env.development
+client/.env.production
+client/.env.*
 
 node_modules/
 
