--- a/contracts/package.json
+++ b/contracts/package.json
@@ -2,6 +2,7 @@
   "name": "contracts",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,13 +11,21 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^6.0.0",
-    "hardhat": "^2.25.0"
+    "@nomicfoundation/hardhat-chai-matchers": "^2.1.0",
+    "@nomicfoundation/hardhat-ethers": "^4.0.0",
+    "@nomicfoundation/hardhat-ignition-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-network-helpers": "^3.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
+    "@nomicfoundation/hardhat-verify": "^3.0.0",
+    "@nomiclabs/hardhat-etherscan": "^3.1.8",
+    "chai": "^5.2.1",
+    "ethers": "^6.15.0",
+    "hardhat": "^2.25.0",
+    "solhint": "^6.0.0"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.3.0",
     "dotenv": "^17.2.0",
-    "ethers": "^6.15.0",
     "fs": "^0.0.1-security"
   }
 }
