feat: add to folders and files to github

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 node_modules
+node_modules/
+jspm_packages/
 .env
 .env.local
 .env.development.local
@@ -6,4 +8,10 @@ node_modules
 env.production.local
 .env.development
 .env.production
-.env.*
+
+contracts/
+my-hardhat/
+
+dist/
+build/
+out/
