--- a/client/.gitignore
+++ b/client/.gitignore
@@ -27,14 +27,19 @@ Component/
 Component1/
 Component3/
 
-client/.env
-client/.env.local
-client/.env.development.local
-client/.env.test.local
-client/env.production.local
-client/.env.development
-client/.env.production
-client/.env.*
+NewComponent/Wallet/
+NewComponenet/FirebaseStore/
+NewComponent/Firebox_page/
+NewComponent/AuthPage/
+
+.env
+.env.local
+.env.development.local
+.env.test.local
+env.production.local
+.env.development
+.env.production
+
 
 node_modules/
 
