--- a/hardhat-fresh/.gitignore
+++ b/hardhat-fresh/.gitignore
@@ -1,6 +1,14 @@
 node_modules
 .env
 
+
+.env.local
+.env.development.local
+.env.test.local
+env.production.local
+.env.development
+.env.production
+
 # Hardhat files
 /cache
 /artifacts
