--- a/nodeJs/package.json
+++ b/nodeJs/package.json
@@ -3,15 +3,21 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon server js"
+    "backup": "node backup.js",
+    "restore": "node restore.js",
+    "backup-auto": "node backup.js --auto",
+    "start": "npm run backup-auto && node server.js",
+    "dev": "nodemon server.js && npm run backup"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@pinata/sdk": "^2.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "child_process": "^1.0.2",
     "config": "^3.3.12",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
